<resources>
    <string name="app_name">MyChalet</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">تسجيل الدخول</string>
    <string name="placeholder">placeholder</string>
    <string name="txt_welcome_back">Welcome</string>
    <string name="txt_email">Email</string>
    <string name="txt_password">Password</string>
    <string name="txt_forgot_password">Forgot Password ?</string>
    <string name="txt_sign_in">Login</string>
    <string name="txt_have_account">ليس لديك حساب ؟ اشترك الان</string>
    <string name="txt_first_name">Name</string>
    <string name="txt_last_name">الاسم الاخير</string>
    <string name="txt_register">Sign Up</string>

    <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="facebook_app_id">2229811197301441</string>
    <string name="fb_login_protocol_scheme">fb2229811197301441</string>

</resources>
