<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg_gradiant"
    android:orientation="vertical">

    <TextView
        android:id="@+id/welcome_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:text="@string/txt_welcome_back"
        android:textColor="#ffffff"
        android:textSize="30sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_email_input_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome_back"
        android:layout_margin="10dp"
        android:theme="@style/TextInputLayoutAppearance">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:hint="@string/txt_email"
            android:inputType="textEmailAddress"
            android:textColor="#ffffff" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_password_input_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_email_input_container"
        android:layout_margin="10dp"
        android:theme="@style/TextInputLayoutAppearance"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="#ffffff">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:hint="@string/txt_password"
            android:inputType="textPassword"
            android:textColor="#ffffff" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/login_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_password_input_container"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="46dp"
        android:layout_marginLeft="46dp"
        android:layout_marginTop="10sp"
        android:text="@string/txt_forgot_password"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_forgot_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/curved_button"
        android:backgroundTint="@color/colorAccent"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:onClick="signIn"
        android:padding="5dp"
        android:text="@string/txt_sign_in"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <Button
        android:id="@+id/google_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/email_login_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="16dp"
        android:background="@drawable/curved_button"
        android:backgroundTint="#e20000"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:onClick="googleSignIn"
        android:text="Continue with Google"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/email_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:background="@drawable/curved_button"
        android:backgroundTint="@color/colorAccent"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:onClick="emailSignUp"
        android:text="SignUp using Email"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>